# vcorp.sso

./: MANIFEST.in  README.txt  pyproject.toml
.github/workflows/: python-package-build.yml  python-publish.yml
vcorp/sso/: __init__.py  policy.py
